app/styles/main.scss
$icon-font-path: '../fonts/';

// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";

// endbower
//pins on images
.fa {
  padding-right: 8px;
}
.stats {
  width: 100%;
  height: 170px;
  text-align: right;
  padding-right: 15px;
  .pin,
  .heart,
  .heart-red {
    display: inline-block;
    padding: 15px 7px;
  }
  .pin .fa-thumb-tack {
    color: yellow;
  }
  .heart .fa-heart {
    color: white;
  }
  .heart-red .fa-heart {
    color: red;
  }
}

// Top Section
.top {
  background: url("../images/RedBrickWall.jpg") no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  padding-left: 30px;
  padding-bottom: 50px;
  color: white;
  p {

  }
  h1 {
    font-size: 3.5pc;
  }
}

//aside
.bottom {
  width: 100%;
  position: relative;

  //margin-top: -20px;
  box-sizing: border-box;
  #left-aside {
    width: 33%;
    background-color: black;
    color: white;
    text-align: center;
    padding: 30px;
    display: inline-block;
    height: 100%;
    position: absolute;

    //box-sizing: border-box;
    button {
      width: 49%;
      border-radius: 20px;
      margin-top: 20px;
      margin-bottom: 20px;
      padding: 5px 0;
      &.mail {
        background-color: black;
        border: solid 1px grey;
        span,
        i {
          color: grey;
        }
      }
      &.follow {
        background-color: #00a46c;
        border-color: #00a46c;
        i {
          color: #004f34;
        }
      }
    }
    .mid-aside {

      //width: 100%;
      border-top: solid 1px grey;
      border-bottom: solid 1px grey;

      //  box-sizing: border-box;
      ul {
        .title {

        }
        .amount {
          font-size: 2pc;
          strong {
            small {
              font-size: 1.2pc;
            }
          }
        }
      }
      #stories,
      #followers {
        display: inline-block;
        padding: 10px;
        width: 49%;
        text-align: center;

        //box-sizing: border-box;
      }
    }
    .bottom-aside {
      div {
        p {
          width: 49%;
          &.time {
            color: grey;
          }
        }
      }
    }
  }
  section {
    position: relative;
    margin-left: 33%;

    //float: right;
    width: 66%;
    display: inline-block;
    .header {

    }
    #portfolio {
      padding: 10px;
      background-color: #EBEDEB;
      #pf-left {
        width: 66%;
        display: inline-block;
        .pairs {

          #img1 {
            background-image: url("https://images.unsplash.com/photo-1445462657202-a0893228a1e1?q=80&fm=jpg&s=4681429f905b5b350f213478c1fe6084");
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            display: inline-block;
            width: 49.5%;
          }
          #img2 {
            background-image: url("https://images.unsplash.com/photo-1445459317604-f36c392c4142?q=80&fm=jpg&s=3ba722a6ec3587dbf97ebba04c3b5c62");
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            display: inline-block;
            float: right;
            width: 49.5%;
          }
          #img4 {
            background-image: url("https://images.unsplash.com/photo-1445452916036-9022dfd33aa8?q=80&fm=jpg&s=113ec033964ef7ce1191b6af54c7509a");
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            display: inline-block;
            width: 49.5%;
          }
          #img5 {
            background-image: url("https://images.unsplash.com/photo-1445450722870-076060f42fb1?q=80&fm=jpg&s=20dd0233dda38903bcf546c39a6c3180");
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
            display: inline-block;
            width: 49.5%;
          }
        }
        .single {
          #img3 {
            background-image: url("https://images.unsplash.com/photo-1445445290350-18a3b86e0b5a?q=80&fm=jpg&s=4ca5b01c43928584a67189ea20c0375f");
            -webkit-background-size: cover;
            -moz-background-size: cover;
            -o-background-size: cover;
            background-size: cover;
          }
        }
      }
      #pf-right {
        display: inline-block;
        width: 33%;
        #img6 {
          background-image: url("https://images.unsplash.com/photo-1445437303333-50e823122ca6?q=80&fm=jpg&s=446e576c21b6158089d5edca174dcba6");
          -webkit-background-size: cover;
          -moz-background-size: cover;
          -o-background-size: cover;
          background-size: cover;
        }
      }
    }
  }
}
li {
  list-style: none;
}
.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
  p + h4 {
    margin-top: 28px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }

  /* Space out the masthead */
  .header {

    //  margin-bottom: 30px;
  }

  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

